maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: not found: value a
	val m = getIndication(a+1,b)
                              ^JediEscaper:23: error: not found: value a
	val n = getIndication(a,b+1)
                              ^JediEscaper:24: error: not found: value a
	val o = getIndication(a-1,b)
                              ^JediEscaper:25: error: not found: value a
	val p = getIndication(a,b-1)
                              ^JediEscaper:27: error: not found: value a
		case (m,n,o,p) if m == getIndication(a,b) - 1 => setDirection(Direction.EAST); avance()
                                                     ^JediEscaper:28: error: not found: value a
		case (m,n,o,p) if n == getIndication(a,b) - 1 => setDirection(Direction.SOUTH); avance()
                                                     ^JediEscaper:29: error: not found: value a
		case (m,n,o,p) if o == getIndication(a,b) - 1 => setDirection(Direction.WEST); avance()
                                                     ^JediEscaper:30: error: not found: value a
		case (m,n,o,p) if p == getIndication(a,b) - 1 => setDirection(Direction.NORTH); avance()
                                                     ^