maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var x = 0
var y = 0

def dansLeCadre(a:Int,b:Int):Boolean={
	if((a<=getMondeLargeur() -1) && (b<=getMondeHauteur() -1) && (0<=a)&& (0 <=b)){true}else{false}
}

def indic(a:Int,b:Int){
	if(dansLeCadre(a,b-1) && getIndication(a,b-1)==9999 && !aMurNord(a,b) ){setIndication(a,b-1,getIndication(a,b)+1);indic(a,b-1)}
	if(dansLeCadre(a-1,b) && getIndication(a-1,b)==9999 && !aMurOuest(a,b) ){setIndication(a-1,b,getIndication(a,b)+1);indic(a-1,b)}
	if(dansLeCadre(a,b+1) && getIndication(a,b+1)==9999 && !aMurNord(a,b+1)){setIndication(a,b+1,getIndication(a,b)+1);indic(a,b+1)}
	if(dansLeCadre(a+1,b) && getIndication(a+1,b)==9999 && !aMurOuest(a+1,b)){setIndication(a+1,b,getIndication(a,b)+1);indic(a+1,b)}
		
}

def aLaNiche(){
	var x = getX()
	var y = getY()
	var d = 0
	val m = getIndication(a+1,b)
	val n = getIndication(a,b+1)
	val o = getIndication(a-1,b)
	val p = getIndication(a,b-1)
	(m,n,o,p) match{
		case (m,n,o,p) if m == getIndication(a,b) - 1 => setDirection(Direction.EAST); avance()
		case (m,n,o,p) if n == getIndication(a,b) - 1 => setDirection(Direction.SOUTH); avance()
		case (m,n,o,p) if o == getIndication(a,b) - 1 => setDirection(Direction.WEST); avance()
		case (m,n,o,p) if p == getIndication(a,b) - 1 => setDirection(Direction.NORTH); avance()
		case _ => avance()
	}
}

for(i <- 0 to getMondeLargeur() - 1){
	for(c <- 0 to getMondeHauteur() - 1){
		 if(aBiscuit(i,c)){x = i; y = c}
	}
}



setIndication(x,y,0)
indic(x,y)
aLaNiche()
    

}
